updated readme, modified filestructure, fixed filepaths in index.html nav

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       </section>
       <section id="searchOptions">
         <input type="text" id="search" placeholder="Search..." />
-        <button id="searchButton">Search</button>
+        <button class="searchBtn"><i class="icon"></i></button>
         <div class="dropdown">
-          <button class="dropbtn">
+          <button class="dropBtn">
             Accessibility Options
-            <i class="fa fa-caret-down"></i>
+            <i class="icon"></i>
           </button>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -32,12 +32,12 @@
       </section>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/gallery.html">Art Gallery</a></li>
-          <li><a href="/interns.html">Our Interns</a></li>
-          <li><a href="/mentors.html">Our Mentors</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pages/gallery.html">Art Gallery</a></li>
+          <li><a href="/pages/interns.html">Our Interns</a></li>
+          <li><a href="/pages/mentors.html">Our Mentors</a></li>
+          <li><a href="/pages/about.html">About</a></li>
+          <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
