--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YAP Makerspace</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
   <body>
     <header>
       <section id="logo">
-        <img src="/assets/logo.png" alt="YAP Makerspace logo" />
+        <img src="/assets/images/YAP-logo.svg" alt="YAP Makerspace logo" />
         <h1>Makerspace</h1>
         <h4>at</h4>
         <h2>OUSD - Young Adult Program</h2>
@@ -61,7 +61,10 @@
       <h2>In Collaboration With</h2>
       <section id="collabs">
         <div class="collabBox">
-          <img src="/assets/spEd-logo.svg" alt="OUSD Special Education logo" />
+          <img
+            src="/assets/images/spEd-logo.svg"
+            alt="OUSD Special Education logo"
+          />
           <h3>OUSD - Special Education Program</h3>
           <hr />
           <p>915 54th St. Oakland, CA 94608</p>
@@ -72,7 +75,7 @@
         </div>
         <div class="collabBox">
           <img
-            src="/assets/OUSD-logo.png"
+            src="/assets/images/OUSD-logo.png"
             alt="Oakland Unified School District logo"
           />
           <h3>Oakland Unified School District</h3>
