small update to <i> el classes for specificity

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <section id="searchOptions">
         <!-- TODO: research site search functionality -->
         <input type="text" id="search" placeholder="Search..." />
-        <button class="searchBtn"><i class="icon"></i></button>
+        <button class="searchBtn"><i class="icon search"></i></button>
         <div class="dropdown">
           <button class="dropBtn">
             Accessibility Options
-            <i class="icon"></i>
+            <i class="icon options"></i>
           </button>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -116,7 +116,7 @@
           Makerspace, or to get in touch with a member of our team!
         </p>
         <a href="https://www.instagram.com/yapmakerspace/">
-          <i class="iconSocial"></i>
+          <i class="icon social"></i>
         </a>
       </section>
       <section id="quickLinks">
